--- a/cheapSupermarkets/resources/sass/app.scss
+++ b/cheapSupermarkets/resources/sass/app.scss
@@ -1,1 +1,11 @@
-//
+@import 'home/style.scss';
+
+* {
+    box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
+}
+
+body {
+    font-family: sans-serif;
+}
